fix: update Vercel configuration and root index.html for proper deployment
- Configure Vercel to serve Next.js app from app-web directory using root property
- Create a proper root index.html that displays while Next.js app loads
- This should resolve the 404 error on Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "app-web/package.json",
-      "use": "@vercel/next",
-      "config": {}
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app-web/$1"
-    }
-  ]
+  "framework": "nextjs",
+  "root": "app-web"
 }
