--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,19 @@
 {
   "version": 2,
-  "framework": "nextjs",
-  "root": "app-web"
+  "builds": [
+    {
+      "src": "app-web/**/*",
+      "use": "@vercel/next",
+      "config": {
+        "rootDirectory": "app-web"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app-web/$1",
+      "continue": true
+    }
+  ]
 }
