fix: update Vercel configuration with correct syntax
- Use 'root' instead of 'rootDirectory' property
- Specify the framework as nextjs for proper detection
- This should resolve the deployment issue with Next.js app in subdirectory

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
-  "rootDirectory": "app-web",
-  "buildCommand": "cd app-web && npm run build",
-  "devCommand": "cd app-web && npm run dev",
-  "installCommand": "cd app-web && npm install",
-  "outputDirectory": "app-web/.next"
+  "framework": "nextjs",
+  "root": "app-web"
 }
