--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,17 @@
 {
-  "framework": "nextjs",
-  "root": "app-web"
+  "builds": [
+    {
+      "src": "app-web/package.json",
+      "use": "@vercel/next",
+      "config": {
+        "rootDirectory": "app-web"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app-web/$1"
+    }
+  ]
 }
