fix: simplify Vercel builds configuration
- Use src pattern to match all files in app-web directory
- Configure Next.js builder to use app-web as root directory
- Remove routes that might interfere with Next.js routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,11 @@
 {
   "builds": [
     {
-      "src": "app-web/package.json",
+      "src": "app-web/**/*",
       "use": "@vercel/next",
       "config": {
         "rootDirectory": "app-web"
       }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app-web/$1"
     }
   ]
 }
