--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "app-web/**/*",
+      "src": "app-web/package.json",
       "use": "@vercel/next",
       "config": {
         "rootDirectory": "app-web"
