fix: simplify Vercel configuration and let dashboard settings handle root directory
- Use simple framework configuration since root directory is set in Vercel dashboard
- Remove conflicting builds configuration that was causing issues
- Add specific vercel.json to app-web directory to handle install with legacy-peer-deps

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
 {
-  "builds": [
-    {
-      "src": "app-web/package.json",
-      "use": "@vercel/next",
-      "config": {
-        "rootDirectory": "app-web"
-      }
-    }
-  ]
+  "framework": "nextjs"
 }
