fix: update Vercel configuration to use legacy-peer-deps for dependency conflicts

--- a/app-web/vercel.json
+++ b/app-web/vercel.json
@@ -1,5 +1,4 @@
 {
-  "installCommand": "cd app-web && npm install --legacy-peer-deps",
-  "buildCommand": "cd app-web && npm run build",
-  "outputDirectory": "app-web/.next"
+  "installCommand": "npm install --legacy-peer-deps",
+  "buildCommand": "npm run build"
 }
