--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "framework": "nextjs"
+  "builds": [
+    {
+      "src": "app-web/next.config.mjs",
+      "use": "@vercel/next"
+    }
+  ]
 }
