--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,4 @@
 {
-  "builds": [
-    {
-      "src": "app-web/next.config.mjs",
-      "use": "@vercel/next"
-    }
-  ]
+  "installCommand": "npm install --prefix app-web --legacy-peer-deps",
+  "buildCommand": "npm run build --prefix app-web"
 }
