--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-  "installCommand": "npm install --prefix app-web --legacy-peer-deps",
-  "buildCommand": "npm run build --prefix app-web"
+  "buildCommand": "cd app-web && npm install --legacy-peer-deps && npm run build"
 }
