--- a/app-web/package.json
+++ b/app-web/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "dompurify": "^3.3.0",
+    "isomorphic-dompurify": "^2.33.0",
+    "lucide-react": "^0.554.0",
     "next": "14.2.33",
+    "next-nprogress-bar": "^2.4.7",
     "react": "^18",
     "react-dom": "^18"
   },
