chore: atualiza dependências e adiciona scripts de upload

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lint": "cd app-web && npm run lint"
   },
   "dependencies": {
+    "@microsoft/clarity": "^1.0.1",
     "@vercel/blob": "^2.0.0",
     "dotenv": "^17.2.3"
   }
